--- a/index.html
+++ b/index.html
@@ -5,27 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
     <h1>Michelle Brytowski</h1>
-        <p>About</p>
-        <p>Portfolio</p>
-        <p>Contact</p>
+        <p class="about">About</p>
+        <p class="portfolio">Portfolio</p>
+        <p class="contact">Contact</p>
 
-    <h2>About Me</h2>
+    <div>
+        <h2>About Me</h2>
 
-    <img src="./assets/images/Profile Pic.jpeg" alt="Profile Picture">
+        <img src="./assets/images/Profile Pic.jpeg" alt="Profile Picture">
 
-    <p>Hello! Welcome to my portfolio. Take a look around and feel free 
+        <p>Hello! Welcome to my portfolio. Take a look around and feel free 
         to contact me with questions or opportunities.
-    </p>
-    <p>A little info about me: I grew up in Minnesota and received my undergrad degree
+        </p>
+        <p>A little info about me: I grew up in Minnesota and received my undergrad degree
         from North Dakota State University (Go Bison!). I've lived in Colorado since 2010 and
         plan on staying for awhile. 
-    </p>
-    <p>I have a passion for the technical and the creative which is what drew me
+        </p>
+        <p>I have a passion for the technical and the creative which is what drew me
         to Web Development.
-    </p>
+        </p>
+    </div>
+
+    <footer class="footer">
+        <p>Copyright ©</p>
+    </footer>
 
     
 </body>
