--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>Michelle Brytowski</h1>
+    <h1 class="header">Michelle Brytowski</h1>
         <p class="about">About</p>
         <p class="portfolio">Portfolio</p>
         <p class="contact">Contact</p>
