--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>Michelle Brytowski</h1>
+    <h1 class="header">Michelle Brytowski</h1>
         <p class="about">About</p>
         <p class="portfolio">Portfolio</p>
         <p class="contact">Contact</p>
 
-    <h2>Contact</h2>
+    <h1 class="h2">Contact</h1>
 
     <form>
         Name <br>
