--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>Michelle Brytowski</h1>
+    <h1 class="header">Michelle Brytowski</h1>
         <p class="about">About</p>
         <p class="portfolio">Portfolio</p>
         <p class="contact">Contact</p>
 
-    <div>
-        <h2>About Me</h2>
+    
+        <div class="container">
+            <h1 class="h2">About Me</h1>
 
-        <img src="./assets/images/Profile Pic.jpeg" alt="Profile Picture">
+            <img class="profile" src="./assets/images/Profile Pic.jpeg" alt="Profile Picture">
 
-        <p>Hello! Welcome to my portfolio. Take a look around and feel free 
-        to contact me with questions or opportunities.
-        </p>
-        <p>A little info about me: I grew up in Minnesota and received my undergrad degree
-        from North Dakota State University (Go Bison!). I've lived in Colorado since 2010 and
-        plan on staying for awhile. 
-        </p>
-        <p>I have a passion for the technical and the creative which is what drew me
-        to Web Development.
-        </p>
-    </div>
+            <p>Hello! Welcome to my portfolio. Take a look around and feel free 
+            to contact me with questions or opportunities.
+            </p>
+            <p>A little info about me: I grew up in Minnesota and received my undergrad degree
+            from North Dakota State University (Go Bison!). I've lived in Colorado since 2010 and
+            plan on staying for awhile. 
+            </p>
+            <p>I have a passion for the technical and the creative which is what drew me
+            to Web Development.
+            </p>
+        </div>
+    
 
     <footer class="footer">
         <p>Copyright ©</p>
