--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <input type="text" name="message">
     </form>
 
-    <button type="submit">Submit</button>
+    <button class="button" type="submit">Submit</button>
 
 
     <footer class="footer">
