--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,21 @@
         <p class="portfolio">Portfolio</p>
         <p class="contact">Contact</p>
 
-    <h1 class="h2">Contact</h1>
+    <div class="info">
 
-    <form>
-        Name <br>
-        <input type="text" name="fullname"><br>
-        Email <br>
-        <input type="email" name="email"><br>
-        Message <br>
-        <input type="text" name="message">
-    </form>
+        <h1 class="h2">Contact</h1>
 
-    <button class="button" type="submit">Submit</button>
+        <form>
+            Name <br>
+            <input type="text" name="fullname"><br>
+            Email <br>
+            <input type="email" name="email"><br>
+            Message <br>
+            <input type="text" name="message"><br>
+        </form>
+
+        <button class="button" type="submit">Submit</button>
+    </div>
 
 
     <footer class="footer">
