--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,12 @@
         <p class="portfolio">Portfolio</p>
         <p class="contact">Contact</p>
 
+    <section class="content">
+        <img class="project 1" src="http://lorempixel.com/output/abstract-q-c-250-250-3.jpg" alt=""/>
+        <img class="project 2" src="http://lorempixel.com/output/abstract-q-c-250-250-10.jpg" alt=""/>
+        <img class="project 3" src="http://lorempixel.com/output/abstract-q-c-250-250-5.jpg" alt=""/>
+    </section>
+
 
     <footer class="footer">
         <p>Copyright ©</p>
