--- a/index.html
+++ b/index.html
@@ -8,28 +8,32 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <h1 class="header">Michelle Brytowski</h1>
-        <p class="about">About</p>
-        <p class="portfolio">Portfolio</p>
-        <p class="contact">Contact</p>
+    <div>
+        <h1 class="header">Michelle Brytowski</h1>
+            <p class="about">About</p>
+            <p class="portfolio">Portfolio</p>
+            <p class="contact">Contact</p>
+    </div>
+
+
 
     
-        <div class="container">
-            <h1 class="h2">About Me</h1>
+            <div class="content">
+                <h1 class="h2">About Me</h1>
 
-            <img class="profile" src="./assets/images/Profile Pic.jpeg" alt="Profile Picture">
+                <img class="profile" src="./assets/images/Profile Pic.jpeg" alt="Profile Picture">
 
-            <p>Hello! Welcome to my portfolio. Take a look around and feel free 
-            to contact me with questions or opportunities.
-            </p>
-            <p>A little info about me: I grew up in Minnesota and received my undergrad degree
-            from North Dakota State University (Go Bison!). I've lived in Colorado since 2010 and
-            plan on staying for awhile. 
-            </p>
-            <p>I have a passion for the technical and the creative which is what drew me
-            to Web Development.
-            </p>
-        </div>
+                <p>Hello! Welcome to my portfolio. Take a look around and feel free 
+                to contact me with questions or opportunities.
+                </p>
+                <p>A little info about me: I grew up in Minnesota and received my undergrad degree
+                from North Dakota State University (Go Bison!). I've lived in Colorado since 2010 and
+                plan on staying for awhile. 
+                </p>
+                <p>I have a passion for the technical and the creative which is what drew me
+                to Web Development.
+                </p>
+            </div>
     
 
     <footer class="footer">
