--- a/portfolio.html
+++ b/portfolio.html
@@ -8,16 +8,23 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <h1 class="header">Michelle Brytowski</h1>
-        <p class="about">About</p>
-        <p class="portfolio">Portfolio</p>
-        <p class="contact">Contact</p>
+    <div class="container">
+        <h1 class="header">Michelle Brytowski</h1>
+            <a class="about" href="index.html">About</a>
+            <a class="portfolio" href="portfolio.html">Portfolio</a>
+            <a class="contact" href="contact.html">Contact</a>
+    </div>
 
     <section class="content">
-        <img class="project 1" src="http://lorempixel.com/output/abstract-q-c-250-250-3.jpg" alt=""/>
-        <img class="project 2" src="http://lorempixel.com/output/abstract-q-c-250-250-10.jpg" alt=""/>
-        <img class="project 3" src="http://lorempixel.com/output/abstract-q-c-250-250-5.jpg" alt=""/>
+        <h1 class="h2">Portfolio</h1>
+            <img class="project1" src="http://lorempixel.com/output/abstract-q-c-250-250-3.jpg" alt=""/>
+            <img class="project2" src="http://lorempixel.com/output/abstract-q-c-250-250-10.jpg" alt=""/>
+            <img class="project3" src="http://lorempixel.com/output/abstract-q-c-250-250-5.jpg" alt=""/>
     </section>
+
+    <div>
+
+    </div>
 
 
     <footer class="footer">
