--- a/contact.html
+++ b/contact.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <h1 class="header">Michelle Brytowski</h1>
-        <p class="about">About</p>
-        <p class="portfolio">Portfolio</p>
-        <p class="contact">Contact</p>
+        <a class="about" href="index.html">About</a>
+        <a class="portfolio" href="portfolio.html">Portfolio</a>
+        <a class="contact" href="contact.html">Contact</a>
 
     <div class="info">
 
         <h1 class="h2">Contact</h1>
 
-        <form>
-            Name <br>
-            <input type="text" name="fullname"><br>
-            Email <br>
-            <input type="email" name="email"><br>
-            Message <br>
-            <input type="text" name="message"><br>
-        </form>
+            <form>
+                Name <br>
+                <input type="text" name="fullname"><br>
+                Email <br>
+                <input type="email" name="email"><br>
+                Message <br>
+                <input type="text" name="message"><br>
+            </form>
 
-        <button class="button" type="submit">Submit</button>
+            <button class="button" type="submit">Submit</button>
     </div>
 
 
