--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <div>
+    <div class="container">
         <h1 class="header">Michelle Brytowski</h1>
-            <p class="about">About</p>
-            <p class="portfolio">Portfolio</p>
-            <p class="contact">Contact</p>
+            <a class="about" href="index.html">About</a>
+            <a class="portfolio" href="portfolio.html">Portfolio</a>
+            <a class="contact" href="contact.html">Contact</a>
     </div>
 
 
